# geo-kernel

./: .gitignore  README.md  pyproject.toml
data/sample/: roads.geojson  roads_clean.geojson  roads_clean.geoparquet
geokernel/: cli.py  config.py  io.py
scripts/: clean_roads.py  test_dem_road_coherance.py
tests/: test_io.py
